# obsidian-vault-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
launchd/: com.user.vault-incremental-reindex.plist.template  com.will.vault-incremental-reindex.plist
scripts/: full_reindex.py  incremental_reindex.py
src/: chunker.py  embeddings.py  indexer.py  models.py  search.py  server.py
tests/: conftest.py  test_chunker.py  test_search_scoring.py
